# underwriter_adk_demo

./: .dockerignore  Dockerfile  README.md  deploy_agent.sh  deploy_webapp.sh  get_safety_theme.py  pyproject.toml  response.json  security_assessment.md  test_stream_output.txt
backend/: main.py
backend/underwriter_agent/: agent.py  tools.py
frontend/: index.css  index.html  index.js
scripts/: add_mock_client.py  generate_pdfs.py  setup_bq.py  setup_rag.py  test_rag.py  test_rag_ensemble.py  test_reasoning.py  test_rest.py  test_stream.py  test_stream_remote.py  test_summary.py  update_stella.py
underwriter_agent/: agent.py  requirements.txt
